# VacanciesParsing

./: .gitignore  README.md  pyproject.toml
src/: connector_class.py  job_site_api_class.py  main.py  user_util.py  vacancy_class.py
tests/: test_connector_class.py  test_job_site_api_class.py  test_user_util.py  test_vacancy_class.py
